# jelou

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Procfile  README.md  pyproject.toml  render.yaml  requirements.txt  rules.md  setup.cfg
.github/workflows/: tests.yml
jelou/: __init__.py  arpabet_to_ipa.py  cli.py  cmu_dictionary.py  jelou_api.py  phonetic_engine.py
tests/: conftest.py  test_arpabet_to_ipa.py  test_integration.py  test_phonetic_engine.py  test_vowel.py  test_web.py
web/: app.py  gunicorn_config.py
web/static/: app.js
web/templates/: 404.html  500.html  index.html
