[metadata]
name = jelou
version = 0.1.0
description = Conversión de IPA a representación fonética legible para hispanohablantes
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
python_requires = >=3.9

[options.packages.find]
where = .
